<resources>
    <string name="app_name">Training Application</string>
    <string name="capture">Capture!</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="my_profile">My profile</string>
    <string name="settings">Settings</string>
    <string name="error">An error occurred.</string>
    <string name="camera_error">An error occurred. Could not use the camera.</string>
    <string name="save_error">An error occurred. Could not save your photo.</string>
    <string name="load_error">An error occurred. Could not load the content.</string>
    <string name="remove_error">>An error occurred. Could not remove the photo.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="sign_in_required">You need to sign in.</string>
    <string name="username">Username</string>
    <string name="photos_count">photos:</string>
    <string name="saved_changes">Saved changes.</string>
    <string name="no_changes">No changes made.</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="logged_out">You have logged out.</string>
    <string name="retry">Try again</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="photo">Photo</string>
    <string name="user">User</string>
    <string name="last_photo">Your last photo</string>
    <string name="recent_photos">Recent photos</string>
    <!-->FirebaseUI override<-->
    <string name="name_hint" translation_description="Hint for name input field">Username</string>
</resources>
