<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_main_menu_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/activity_main_menu_discover"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/discover"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/activity_main_menu_me"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/me"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/activity_main_menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>